# video_questions

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  LOG.md  Makefile  PRD.md  README.md  ideas.md  idee.md  pyproject.toml  qv.sh.sha256
openspec/changes/add-markdown-rendering/: proposal.md  tasks.md
openspec/changes/add-markdown-rendering/specs/llm-output/: spec.md
scripts/: qv.py  qv.sh
src/vq/: main.py
tasks/: todo.md
